# claude-code-setup

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  justfile  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
src/: cli.py
src/claude_code_setup/components/statusline/: component.json  subagent_statusline.py
src/components/safety-gate/: component.json  safety-gate.py
src/components/statusline/: statusline.py  subagent_statusline.py
tests/: test_cli.py  test_safety_gate.py  test_statusline.py
